# station

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: audit-prep.yml  ci.yml
crates/rrn-cli/: Cargo.toml
crates/rrn-cli/src/: main.rs
crates/rrn-cli/tests/: cli_e2e.rs
crates/rrn-crypto/: Cargo.toml
crates/rrn-crypto/src/: hash.rs  keypair.rs  lib.rs  serialize.rs  signed.rs
crates/rrn-crypto/tests/: cross_platform_sign.rs
crates/rrn-crypto/tests/fixtures/: README.md  cross_platform_sign.json
crates/rrn-governance/: Cargo.toml
crates/rrn-governance/src/: lib.rs  proposal.rs  tally.rs  vote.rs
crates/rrn-identity/: Cargo.toml
crates/rrn-identity/src/: address.rs  attestation.rs  lib.rs  sealed.rs  vouch.rs  wallet.rs
crates/rrn-identity/src/recovery/: encryption.rs  flow.rs  gf256.rs  mod.rs  shamir.rs
crates/rrn-identity/tests/: cross_platform_address.rs  cross_platform_wallet.rs  ffi_invariants.rs  shamir_reference_vectors.rs  social_recovery.rs  vouch_log.rs
crates/rrn-identity/tests/fixtures/: README.md  cross_platform_address.json  cross_platform_wallet.json  ffi_invariants.json  generate_shamir_vectors.py  shamir_vectors.json
crates/rrn-ledger/: Cargo.toml
crates/rrn-ledger/src/: engine.rs  lib.rs  settlement.rs  state.rs  transaction.rs
crates/rrn-ledger/tests/: cross_platform_signed_payload.rs  idempotency.rs  lifecycle.rs
crates/rrn-ledger/tests/fixtures/: README.md  cross_platform_signed_payload.json
crates/rrn-marketplace/: Cargo.toml
crates/rrn-marketplace/src/: inquiry.rs  lib.rs  listing.rs  search.rs
crates/rrn-mobile-ffi/: .gitignore  Cargo.toml  README.md  build-ios.sh  build.rs
crates/rrn-mobile-ffi/src/: lib.rs  payload.rs  recovery.rs  rrn_mobile_ffi.udl
crates/rrn-mobile-ffi/tests/: cross_platform_canonical.rs
crates/rrn-mobile-ffi/tests/fixtures/: README.md  cross_platform_canonical.json
crates/rrn-protocol/: Cargo.toml
crates/rrn-protocol/src/: lib.rs
crates/rrn-reputation/: Cargo.toml
crates/rrn-reputation/src/: attestation.rs  decay.rs  lib.rs  score.rs
crates/rrn-station/: Cargo.toml
crates/rrn-station/src/: clock.rs  config.rs  core.rs  events.rs  gossip.rs  history.rs  ledger_view.rs  lib.rs  main.rs  mdns.rs  mobile_server.rs  paired.rs  pairing.rs  rpc.rs  rpc_client.rs  rpc_envelope.rs  server.rs  station.rs  transaction_view.rs  vouch_view.rs
crates/rrn-station/tests/: backup_recover.rs  cross_platform_pairing.rs  cross_platform_vouch.rs  ipc.rs  pairing.rs  rpc_channel.rs  two_station_e2e.rs
crates/rrn-station/tests/fixtures/: cross_platform_pairing.json  cross_platform_vouch.json
crates/rrn-storage/: Cargo.toml
crates/rrn-storage/migrations/: 0001_initial.sql
crates/rrn-storage/src/: db.rs  lib.rs  log.rs  migrations.rs  replay.rs
crates/rrn-storage/src/crdt/: lww_register.rs  mod.rs  or_set.rs  pn_counter.rs
crates/rrn-storage/tests/: crdt_laws.rs  schema.golden.sql
docs/: threat-model.md
docs/adr/: 0001-rust-workspace-and-dual-license.md  0002-canonical-serialization-dcbor.md  0003-bech32-address-format.md  0004-own-shamir-implementation.md  0005-station-signed-settlement.md  0006-m1-client-architecture.md  0007-rust-mobile-ffi-uniffi.md  0008-mobile-station-transport.md  0009-universal-reputation-algorithm.md  README.md  template.md
docs/design/: README.md  Railroad-Network-Overview.md
docs/spec/: qr-payloads.md
fuzz/: Cargo.toml  README.md  rust-toolchain.toml
fuzz/fuzz_targets/: address_parse.rs  canonical_roundtrip.rs  hash_chain.rs  log_replay.rs  shamir_reconstruct.rs  state_machine.rs  verify_signature.rs  wallet_decrypt.rs
scripts/: demo-phase-0.sh  install-hooks.sh
