[workspace]
resolver = "2"
members = [
    "crates/rrn-crypto",
    "crates/rrn-storage",
    "crates/rrn-identity",
    "crates/rrn-ledger",
    "crates/rrn-protocol",
    "crates/rrn-station",
    "crates/rrn-cli",
    # Phase 1 (M1.0) skeletons.
    "crates/rrn-marketplace",
    "crates/rrn-reputation",
    "crates/rrn-governance",
]
# The cargo-fuzz crate is its own (nightly-only) workspace; keep it out of the
# stable workspace build. See fuzz/README.md.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/railroad-network/station"
authors = ["Railroad Network contributors"]

[workspace.dependencies]
# Shared dependencies are added here as tasks require them.
