[package]
name = "rrn-station"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The Railroad Network station daemon: holds the wallet and log, runs settlement, gossips with peers, and serves the rrn CLI over a Unix socket."

[lib]
name = "rrn_station"
path = "src/lib.rs"

[[bin]]
name = "station"
path = "src/main.rs"

[dependencies]
# All lower library crates, path + version (not a `*` wildcard, which
# cargo-deny rejects).
rrn-crypto = { path = "../rrn-crypto", version = "0.1" }
rrn-storage = { path = "../rrn-storage", version = "0.1" }
rrn-identity = { path = "../rrn-identity", version = "0.1" }
rrn-ledger = { path = "../rrn-ledger", version = "0.1" }

tokio = { version = "1", features = ["full"] }
# The mobile-facing HTTP surface (ADR-0008 / T1.3.3+): plain HTTP over local
# TCP as a dumb carrier — the security boundary is the application-layer sealed
# envelope, not the transport. axum is tokio-native, so it runs on the existing
# runtime, and its long-poll support is what T1.3.5 will build push on.
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "1"
uuid = { version = "1", features = ["v4"] }
# Hidden passphrase entry (not echoed); used by `station init` / `run`.
rpassword = "7"
# Canonical CBOR — for decoding log payloads into history/balances and for the
# secret-key bytes the recovery RPC moves around.
dcbor = "0.25"
# mDNS/DNS-SD advertisement so a mobile can find this station on the local
# network without typing an IP (T1.3.2). Pure Rust with no async-runtime
# dependency of its own — it runs its own thread — so it does not constrain the
# tokio version here. Discovery is not a security boundary (see mdns.rs).
mdns-sd = "0.20"

[dev-dependencies]
tempfile = "3"
